; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_fetch.c_refname_hash_add.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_fetch.c_refname_hash_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.refname_hash_entry = type { i32, i32 }
%struct.hashmap = type { i32 }
%struct.object_id = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.refname_hash_entry* (%struct.hashmap*, i8*, %struct.object_id*)* @refname_hash_add to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.refname_hash_entry* @refname_hash_add(%struct.hashmap* %0, i8* %1, %struct.object_id* %2) #0 {
  %4 = alloca %struct.hashmap*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.object_id*, align 8
  %7 = alloca %struct.refname_hash_entry*, align 8
  %8 = alloca i64, align 8
  store %struct.hashmap* %0, %struct.hashmap** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.object_id* %2, %struct.object_id** %6, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = call i64 @strlen(i8* %9)
  store i64 %10, i64* %8, align 8
  %11 = load %struct.refname_hash_entry*, %struct.refname_hash_entry** %7, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = load i64, i64* %8, align 8
  %15 = call i32 @FLEX_ALLOC_MEM(%struct.refname_hash_entry* %11, i8* %12, i8* %13, i64 %14)
  %16 = load %struct.refname_hash_entry*, %struct.refname_hash_entry** %7, align 8
  %17 = getelementptr inbounds %struct.refname_hash_entry, %struct.refname_hash_entry* %16, i32 0, i32 0
  %18 = load i8*, i8** %5, align 8
  %19 = call i32 @strhash(i8* %18)
  %20 = call i32 @hashmap_entry_init(i32* %17, i32 %19)
  %21 = load %struct.refname_hash_entry*, %struct.refname_hash_entry** %7, align 8
  %22 = getelementptr inbounds %struct.refname_hash_entry, %struct.refname_hash_entry* %21, i32 0, i32 1
  %23 = load %struct.object_id*, %struct.object_id** %6, align 8
  %24 = call i32 @oidcpy(i32* %22, %struct.object_id* %23)
  %25 = load %struct.hashmap*, %struct.hashmap** %4, align 8
  %26 = load %struct.refname_hash_entry*, %struct.refname_hash_entry** %7, align 8
  %27 = getelementptr inbounds %struct.refname_hash_entry, %struct.refname_hash_entry* %26, i32 0, i32 0
  %28 = call i32 @hashmap_add(%struct.hashmap* %25, i32* %27)
  %29 = load %struct.refname_hash_entry*, %struct.refname_hash_entry** %7, align 8
  ret %struct.refname_hash_entry* %29
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @FLEX_ALLOC_MEM(%struct.refname_hash_entry*, i8*, i8*, i64) #1

declare dso_local i32 @hashmap_entry_init(i32*, i32) #1

declare dso_local i32 @strhash(i8*) #1

declare dso_local i32 @oidcpy(i32*, %struct.object_id*) #1

declare dso_local i32 @hashmap_add(%struct.hashmap*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
